1.0.4305.2526 [15oct11]
+ You can now limit prices to a specific solar system
! PLEASE NOTE: The following settings and data generated by
  previous versions will be reset:
  1) Item price settings
  2) Mineral price settings
  3) Item prices

1.0.4103.10400 [27mar11]
+ "Refined Volume" column added
+ You can now set maximum prices age in Settings -> Other.
+ Mineral prices age is now tested. Maximum age is set in Settings -> Other.
+ The region and price type you use for loading mineral prices are now saved.

1.0.4103.5781 [27mar11]
* Database update: Incursion 1.1.0
+ Exporting feature. Can export as CSV or HTML so far.
* Right alignment on all number-based columns for easier comparison of values
* Fixed MetaLevel reading from non-tailored DB's

1.0.3799.31742 [27may10]
* You guess it: Tyrannis update. Let's hope CCP released correct DB :)
+ Since i was updating DB anyway, i also added Meta Levels column. Enjoy.
+ Clarified error message when Limited API key is provided instead of full one.

1.0.3740.24868 [29mar10]
* Bugfix: "Use quantities" icon shows correct state now (fixed from inverted).
+ "Volume" column displaying item's volume in m3. If you already used the program, 
  column will be in the end. You can rearrange columns by dragging them.
* Bugfix: Totals row no longer show "Loss %" value when prices are unknown
+ Added status bar timer showing when assets can be updated (CCP api-side limitation)
* Added warning when trying to update assets.

1.0.3739.21356 [28mar10]
* Bugfix: Selecting new price type didn't have effect immediately

1.0.3738.52 [26mar10]
+ A button to open whatsnew.txt - see it after the blue question icon on the main toolbar

1.0.3737.43073 [26mar10]
+ A few controls to filter assets: no assembled items, no assembled ships,
  no assembled containers. These are icons next to three combos in the Assets toolbar.
+ Containers are finally out. You can select a container in the third combobox of assets
  toolbar.

1.0.3736.34640 [25mar10]