@@ -1,3 +1,7 @@
+
+* Totals calculation for Volume didn't take quantity into account.
+* Unknown prices in totals were deprecated. Now totals are shown for known part.
+
 1.0.4305.2526 [15oct11]
 + You can now limit prices to a specific solar system
 ! PLEASE NOTE: The following settings and data generated by
